Update rust dependencies & Enable proguard optimization (#71)
* Update gif rust dependencies

* Update file picker rust

* Remove unused deps

* fixup!

* Refactor to use common funcs

* Use ThrowRuntimeExAndDefault

* Use ThrowRuntimeExAndDefault

* Update corrosion

* Enable proguard optimization

* Narrow down

---------

Co-authored-by: Dude so hot <djohn@fbi.gov>